Updated  .env.template with the additional environment variables required

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,10 @@ FLASK_DEBUG=true
 
 # Required to use Flask's session feature (for storing todos in a browser cookie in the first exercise): https://flask.palletsprojects.com/en/2.3.x/config/#SECRET_KEY
 SECRET_KEY=secret-key
+
+# Required to access Trello's API: https://trello.com/app-key
+TRELLO_KEY=
+TRELLO_TOKEN=
+
+# Required to access the TRELLO BOARD
+TRELLO_BOARD_ID=
