Update playbook to create directory for app

--- a/my-ansible-playbook.yml
+++ b/my-ansible-playbook.yml
@@ -14,3 +14,6 @@
     - name: Install poetry
       ansible.builtin.shell:
         cmd: curl -sSL https://install.python-poetry.org | python3 -
+    - name: Create directory for the To-Do App code
+      ansible.builtin.command: mkdir /opt/todoapp
+      become: yes
