Added a “copy” task to copy the “todoapp.service” file to “/etc/systemd/system/todoapp.service” on the host.

--- a/my-ansible-playbook.yml
+++ b/my-ansible-playbook.yml
@@ -42,4 +42,9 @@
         src: /home/ec2-user/.env.j2
         dest: /opt/todoapp/.env
       become: yes
+    - name: Copy todoapp.service file to managed hosts
+      ansible.builtin.copy:
+        src: /home/ec2-user/todoapp.service
+        dest: /etc/systemd/system/todoapp.service
+      become: yes
    
