Amended “systemd” task to start the To-Do app

--- a/my-ansible-playbook.yml
+++ b/my-ansible-playbook.yml
@@ -47,8 +47,9 @@
         src: /home/ec2-user/todoapp.service
         dest: /etc/systemd/system/todoapp.service
       become: yes
-    - name: todoapp
+    - name: Run ToDoApp
       ansible.builtin.systemd:
+        name: todoapp
         state: restarted
         daemon_reload: true
       become: yes
