--- a/my-ansible-playbook.yml
+++ b/my-ansible-playbook.yml
@@ -25,6 +25,8 @@
       ansible.builtin.file:
         path: /opt/todoapp
         state: directory
+        owner: ec2-user
+        mode: 0755
       become: yes
     - name: Get the latest version of your code with Git
       ansible.builtin.git:
@@ -41,12 +43,10 @@
       ansible.builtin.template:
         src: /home/ec2-user/.env.j2
         dest: /opt/todoapp/.env
-      become: yes
     - name: Copy todoapp.service file to managed hosts
       ansible.builtin.copy:
         src: /home/ec2-user/todoapp.service
         dest: /etc/systemd/system/todoapp.service
-      become: yes
     - name: Run ToDoApp
       ansible.builtin.systemd:
         name: todoapp
